css/bantp.less
/**
 * This is the awesome LESS CSS stylesheet for BANTP :D
 */

/** TYPOGRAPHY **/
.f_open_lt {
	font-family: Open Sans;
	font-weight: 300;
}

/** UTILITY MIXINs **/
.borderRadius ( @radius : 5px ) {
	border-radius: @radius;
	-webkit-border-radius: @radius;
}

.gradientBg ( @top, @bottom ) {
	background: -webkit-linear-gradient( @top, @bottom );
}

.headerShadow {
	text-shadow: 0 2px 10px #000, 0 -1px 1px #fff;
}

.transition(@time: 0.2s) {
	-webkit-transition: @time all;
	transition: @time all;
}

.stroke(@size: 1px, @color: #fff) {
	-webkit-text-stroke: @size @color;
}


/** PRIMARY STYLES **/
* {
	font-family: Open Sans;
	color: #222;
	//-webkit-user-select: none;
}

html, body {
	height: 100%;
}

body {
	//background: #ddd;
	background: url('/backgrounds/default.jpg') no-repeat top center;
	background-size: 100% 100%;
}

a,button {
	.f_open_lt;
	&.btn {
		.f_open_lt;
	}
}

/** HEADERS and TYPOGRAPHY **/

h1,h2,h3,h4 {
	// font-family: Open Sans;
	font-weight: 300;
}
h1,h2 {
	color: #eee;
	text-shadow: 0 1px 4px #222;
}

h1 {

	&.logo {
		color: #eee;
		font-size: 3em;
		text-align: center;
		letter-spacing: -2px;
		//.stroke(2px, #fff);
		text-shadow: 0 2px 3px #222,0 1px 15px #000;
		&:hover {
			//color: #333;
			//.headerShadow;
		}
	}
}

h2 {
	margin: 0;
	letter-spacing: -2px;
	font-weight: 300;
}

i {
	color: #eee;
}

.module {
	.gradientBg( #ddd, #ccc );
	.borderRadius( 3px );
	border: 1px #999 solid;
	//box-shadow: 0 1px 4px #222, inset 0 1px 1px #fff;
	box-shadow: inset 0 1px 1px #fff;
	padding: 8px;
	margin: 10px 10px 10px 0;
}

.app_icon {
	border: 2px #eee solid;
	border-radius: 3px;
	box-shadow: 0 1px 4px #444;
	width: 38px;
	height: 38px;
	display: block;
	float: left;
	margin: 0 5px 5px 0;
	opacity: 0.7;

	.transition(0.3s);

	&:hover {
		opacity: 1;
	}

	img {
		border-radius: 3px;
	}
}


/** The bigguns **/
.sidebar {
	position: fixed;
	left: 0;
	top: 0;
	z-index: 100;
	height: 100%;
	min-height: 100%;
	background: -webkit-linear-gradient(left, #222, #444);
	box-shadow: inset 0 0 10px #000;
	text-align: center;
	padding-top: 10px;

	p {
		padding: 5%;
		background: -webkit-linear-gradient( top, #999, #ccc );
		border: 1px #ddd solid;
		box-shadow: 0 0 4px #222;
		color: #eee;
		text-shadow: 0 1px 3px #000;
		margin: 0;
		position: relative;
		z-index: 150;
		font-size: .8em;
	}

	a {
		display: block;
		text-align: center;
		padding: 15%;
		font-size: 2em;
		text-shadow: 0 2px 10px #000;
		text-decoration: none;
		.transition(0.3s);
		position: relative;
		z-index: 100;

		&:hover {
			background: -webkit-linear-gradient( top, #222, #000 );
			box-shadow: 0 0 10px #000, inset 0 1px 1px #444, inset 0 -1px 1px #222;
		}

		&:active {
			background: -webkit-linear-gradient( top, #333, #111 );
		}
	}
}
.workspace {
	position: fixed;
	right: 0;
	top: 0;
	z-index: 80;
	height: 100%;
	min-height: 100%;
	overflow-y: scroll;
}

